# SBI_livekit

./: out-call.json  outbound-auth-update.json  pyproject.toml
data/banking/: bank_sources.json  npci_upi_faqs.txt  rbi_integrated_ombudsman_faq.txt  rbi_kyc_master_direction.txt  rbi_neft_faq.txt  rbi_rtgs_faq.txt  sbi_neft_rtgs_faq.txt  sbi_retail_td_rates.txt  sbi_revised_service_charges.txt  sbi_savings_interest.txt
data/banking/faiss_index/: index.faiss  index.pkl
src/: agent.py  calc_tools.py  email_utils.py  ingest_banking.py  knowledge.py
